# sopel-rep

./: README.md  README.py  pyproject.toml  rep.py
sopel_rep/: manager.py  plugin.py
